--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Selecciona una opción:</p>
         <ul>
             <li><a href="pages/registro.html">Registro de Participantes</a></li>
-            <li><a href="pages/seguimiento.html">Seguimiento en Tiempo Real</a></li>
+            <li><a href="pages/triatlon.html">Iniciar Triatlon</a></li>
         </ul>
     </div>
 </body>
