--- a/pages/triatlon.html
+++ b/pages/triatlon.html
@@ -19,7 +19,7 @@
                 <button>Aumentado</button>
             </div>
         <h2>Participantes</h2>
-        <div id="participantsContainer">
+        <div class="articles" id="participantsContainer">
             <!-- Aquí se mostrarán dinámicamente los detalles de cada participante durante el triatlón -->
         </div>
         <!-- Botón para empezar el triatlón -->
