--- a/pages/triatlon.html
+++ b/pages/triatlon.html
@@ -24,7 +24,10 @@
         <h2>Participantes</h2>
         <div class="articles" id="participantsContainer">
         </div>
-        <button type="button" onclick="empezarTriatlon()">Empezar Triatlón</button>
+        <div>
+            <button type="button" onclick="back()">Volver</button>
+            <button type="button" onclick="empezarTriatlon()">Empezar Triatlón</button>
+        </div>
     </div>
     <script src="../scripts/triatlon.js"></script>
 </body>
