--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,13 +26,13 @@
 <body>
     <div class="loader"></div>
     <div class="container">
-        <h1>Bienvenido al Triatlón
+        <h1 class="caja cj1">Bienvenido al Triatlón
             Gobernación La Cava
         </h1>
-        <h2>
+        <h2 class="caja cj2">
             Caminata 10Km, Natacion 10Km, Ciclismo 30Km
         </h2>
-       <h2>
+       <h2 class="caja cj3">
             Selecciona una opción
        </h2>
        <div class="menu">
